<resources>
    <string name="app_name">Glovo</string>
    <string name="text_input_layout_hint_usuario">Usuario</string>
    <string name="activity_login_et_texto_contrasena">Contraseña</string>
    <string name="activity_login_vista_text_boton_inicio_sesion">Iniciar Sesión</string>
    <string name="home_activity_usuario">USUARIO:</string>
    <string name="cardView_content_description_imagen">Imagen del restaurante</string>
    <string name="cardView_text_view_nombre_restaurante">Nombre del restaurante</string>
    <string name="cardView_textView_descripcion_restaurante">Descripción del restaurante</string>
    <string name="cardView_button_ver_menus">MENÚS</string>
    <string name="cardView_menu_texto_boton_comprar">Comprar</string>
    <string name="cardView_menu_texto_cantidad">Cant:</string>
    <string name="activity_anadir_restaurante_texto_nombre_restaurante">Nombre Restaurante</string>
    <string name="activity_anadir_restaurante_texto_descripcion">Descripcion</string>
    <string name="activity_anadir_restaurante_texto_boton">AÑADIR</string>
    <string name="boton_error_texto">Reintentar</string>
</resources>