<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/colorAccent"
    android:gravity="center_vertical">


<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView_layout_ficha_descriptiva"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/card_view_general_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Media -->
        <ImageView
            android:id="@+id/imagenFD"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/cardView_content_description_imagen"
            app:srcCompat="@drawable/ic_launcher_foreground"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/cardView_padding_general">

            <TextView
                android:id="@+id/nombreFD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cardView_text_view_nombre_restaurante"
                android:textAppearance="?attr/textAppearanceHeadline6"
                />
            <TextView
                android:id="@+id/descripcionFD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/card_view_general_margin"
                android:text="@string/cardView_textView_descripcion_restaurante"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary"
                />

        </LinearLayout>

        <!-- Button -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/cardView_margin_boton"
            android:orientation="horizontal">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnMenusFD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="getListaMenus"
                android:text="@string/cardView_button_ver_menus"
                />
        </LinearLayout>

    </LinearLayout>


</com.google.android.material.card.MaterialCardView>

</LinearLayout>