<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorAccent"
    android:padding="@dimen/activity_anadir_restaurante_general_padding"
    tools:context=".anadirRestaurante.AnadirRestaurante">

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"
        android:text="NUEVO RESTAURANTE" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nombreRestaurante_tl"
        android:layout_below="@+id/tvTitulo"
        android:layout_width="match_parent"
        android:layout_marginBottom="15dp"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/icono_restaurante"
        android:hint="@string/activity_anadir_restaurante_texto_nombre_restaurante"
        app:endIconMode="clear_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nombreRestaurante_et"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/descripcion_tl"
        android:layout_marginBottom="15dp"
        android:layout_below="@+id/nombreRestaurante_tl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/icono_descripcion"
        android:hint="@string/activity_anadir_restaurante_texto_descripcion"
        app:endIconMode="clear_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/descripcion_et"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_below="@+id/descripcion_tl"
        android:layout_marginBottom="15dp"
        android:checkedButton="@+id/radio_button_1"
        style="@style/Widget.App.RadioButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/radio_button_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Fast Food"/>
        <RadioButton
            android:id="@+id/radio_button_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Americana"/>
        <RadioButton
            android:id="@+id/radio_button_3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="China"/>
        <RadioButton
            android:id="@+id/radio_button_4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Japonesa"/>

    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/boton_anadir"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:text="@string/activity_anadir_restaurante_texto_boton"
        android:layout_below="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>




</RelativeLayout>